--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.DrawerLayout
+<cn.kli.menuui.MenuDrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dl_main"
@@ -23,4 +23,4 @@
         android:background="@android:color/background_light"
         android:choiceMode="singleChoice" />
 
-</android.support.v4.widget.DrawerLayout>  
+</cn.kli.menuui.MenuDrawerLayout>  
